# c-money

./: .env.example  .flaskenv  .gitignore  CHECKLIST.md  CONTRIBUTING.md  README.md  __main__.py  pyproject.toml  requirements.txt  setup.cfg
app/: main.py
app/database/: db.py  init_db.py
app/models/: .gitkeep
app/routes/: home.py  recurring_routes.py  transaction_routes.py
app/services/: recurring_service.py  salary_service.py  transaction_service.py  validations.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
tests/: test_db.py  test_insert.py
