[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c-money"
version = "1.0.0"
description = "Aplicativo web para gerenciamento de transações financeiras pessoais"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your-email@example.com"}
]
keywords = ["flask", "financeiro", "transações", "budget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "Flask==3.1.3",
    "Werkzeug==3.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/HappyFelizz/c-money"
Documentation = "https://github.com/HappyFelizz/projeto-web#readme"
Repository = "https://github.com/HappyFelizz/projeto-web.git"
Issues = "https://github.com/HappyFelizz/projeto-web/issues"

[tool.setuptools]
packages = ["app"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
app = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/images/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
